<resources>
    <string name="app_name">ScottCasey_04</string>
    <string name="screen_shot_1">Screen shot 1</string>
    <string name="screen_shot_2">Screen Shot 2</string>
    <string name="screen_shot_3">Screen Shot 3</string>
    <string name="more_reviews"><u>More Reviews</u></string>
    <string name="open">OPEN</string>
    <string name="uninstall">UNINSTALL</string>
    <string name="spacer">spacer</string>
    <string name="avatar">avatar</string>
    <string name="place_holder_date">4–15–2017</string>
    <string name="fake_review1">This application does exactly what the description says it does</string>
    <string name="title_placeholder">Great App</string>
    <string name="share_icon">share icon</string>
    <string name="share">Share</string>
    <string name="rev_title_5">Ewww</string>
    <string name="rev_date_5">1–29–2017</string>
    <string name="rev_body_5">\"Terrible application. I\'m not even going to get into it. Can you say delete?\"</string>
    <string name="rev_title_4">Useless</string>
    <string name="rev_date_4">3–01–2017</string>
    <string name="rev_body_4">\"Did not live up to my expectations, I thought this app would be useful. I give 2 stars only because it looks nice.\"</string>
    <string name="rev_title_3">Okay, but needs work.</string>
    <string name="rev_date_3">12–20–2016</string>
    <string name="rev_body_3">\"I found that when you switch from landscape to portrait there is quite a bit of lagging. Also during the transition if you have the input filled out you will lose what you typed. But other then that it\'s great.\"</string>
    <string name="rev_title_2">Does What I Need</string>
    <string name="rev_date_2">10–31–2016</string>
    <string name="rev_body_2">\"I can\'t believe that this app took so long to be in my life. It completes me!!!\"</string>
    <string name="rev_title_1">Great app!</string>
    <string name="rev_date_1">4–15–2017</string>
    <string name="rev_body_1">\"This app does exactly what the developers claim. Works Great!!\"</string>
    <string name="permissions_details">Permissions details</string>
    <string name="send_email">Send Email</string>
    <string name="flag_as_inappropriate">Flag as inappropriate</string>
    <string name="read_more"><u>Read More</u></string>
    <string name="casey_scott">Casey Scott</string>
    <string name="web_builder">Web Builder</string>
    <string name="application_logo_icon">Application logo icon.</string>
    <string name="header_image">header image</string>
</resources>
